Fixed issue where footer overlapped content in mobile browsers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body{
     padding: 0;
+    margin-bottom: 50px;
 }
 .navbar{
     background-color: #ffffff;
